<resources>
    <string name="app_name" translatable="false">Maha Kumbh Mela (Disha Nirdesh)</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="choose_language">Choose Language</string>
    <string name="mahakumbh_mela_2025">MahaKumbh Mela 2025</string>
    <string name="do_s_amp_don_ts"><![CDATA[Do\'s & Don\'ts]]></string>
    <string name="important_announcement_s">Important Announcement\'s</string>
    <string name="book_s_on_mahakumbh">Book\'s on MahaKumbh</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="do_s">Do\'s</string>
    <string name="dont_s">Dont\'s</string>
    <string name="do_list"><![CDATA[• Please check on the website for movement plan, accommodation, key event dates etc. and download the mobile app.\n\n • Travel Light and carry medicines if advised by the doctor.\n\n • Be aware of the facilities like Hospitals, Food, and Emergency Services etc.\n\n • Know emergency contact numbers.\n\n • Use only the Bathing areas/Ghats that are authorized by the Mela administration.\n\n • Use toilets and urinals available.\n\n • Use dustbins for disposal of Waste.\n\n • Use signage for way finding.\n\n • Use parking spots for parking of vehicles and follow traffic rules.\n\n • Inform the Police or Mela Administration if any unidentified or suspicious object is found.\n\n • Follow the rules, regulations and instructions given through the Public Addressal System or any other mode.\n\n • Cooperate with the Departments involved in organizing the Mela.\n\n • Be attentive towards your belongings and Use Lost & Found Centres for the loss of beloved and belongings.]]></string>
    <string name="don_ts_list">• Don\'t carry valuables, unnecessary food and clothing.\n\n • Don\'t trust strangers, don\'t eat at unauthorised places.\n\n • Don\'t attract unnecessary conflicts by provoking peers.\n\n • Don\'t venture into the river beyond permissible limits.\n\n • Don\'t pollute the rivers by using soaps, detergents for cleaning/washing purposes or by throwing Pujan Samagri.\n\n • Don\'t be in crowded places if suffering from a contagious disease.\n\n • Don\'t use plastic bags in the city and mela area during the Maha Kumbh Mela.</string>
    <string name="language">English</string>
    <string name="kumbh_title">Maha Kumbh 2025 Events</string>
    <string name="kumbh_details">The Maha Kumbh 2025 will provide devotees and visitors with a unique experience of faith and culture, serving as a hub for grand performances by renowned Indian artists. The Triveni Pandals, Yamuna Pandals, and Saraswati Pandals are ready to accommodate 2,000 spectators each. In Prayagraj, a total of 24 stages will host folk music, classical dance, and poetry recitals. This Maha Kumbh is not just a religious event but also a vibrant celebration of Indian culture and traditions. Download the List of all the Kumbh Mela Events.</string>
    <string name="kumbh_btn_title">Download List</string>
    <string name="traffic_title">Traffic Plan for Maha Kumbh 2025</string>
    <string name="traffic_details"><![CDATA[The Uttar Pradesh Government\'s 24-member Advisory Committee, led by the ADG of Prayagraj Zone, has developed a comprehensive traffic plan for efficient management and devotee safety. Download the issued advisory by clicking the button below.]]></string>
    <string name="traffic_btn_title">Download Advisory</string>
    <string name="vip_advisory_title">Advisory for VIPs and VVIPs</string>
    <string name="vip_advisory_details">Avoid Visits to Prayagraj During Shahi Snan and Main Parva Dates. In view of heavy crowds and heightened security concerns during the Shahi Snan and Main Parva of the Maha Kumbh Mela, security and protocol assistance for VVIPs, VIPs, and dignitaries cannot be assured. Dignitaries are kindly requested to avoid visiting Prayagraj on these dates to prevent inconvenience and support the smooth conduct of the event. Download the issued advisory by clicking the button below.</string>
    <string name="vip_advisory_btn_title">Download Advisory</string>
    <string name="quiz_title">Maha Kumbh 2025 - Quiz</string>
    <string name="quiz_details">The Government of UP in collaboration with MyGov is pleased to unveil an exciting and enlightening Quiz competition, a delightful component of Mahakumbh 2025. This competition is a splendid opportunity for all, as we come together to honour Mahakumbh’s profound wisdom and its enduring contributions to society. Join us in this commemoration, as your participation adds vibrancy to our cultural heritage and helps to extend the discourse on timeless significance. All participants will be given a digital e-Certificate of Participation.\n\nThe top 3 winners will be rewarded with below mentioned prize:\n\n1st Prize: Rs. 20,000/-\n2nd Prize: Rs. 15,000/-\n3rd Prize: Rs. 10,000/-</string>
    <string name="quiz_btn_title">Play Quiz</string>
    <string name="amusement_zones_title">Agency for Amusement Zones in Maha Kumbh Mela 2025</string>
    <string name="amusement_zones_details">Maha Kumbh Mela is an auspicious occasion, which blends spirituality, culture, tradition, and offers a unique opportunity for organizations to connect with millions of hearts. Prayagraj Mela Authority have selected a vendor for amusement zones for the upcoming Maha Kumbh Mela, the world\'s largest human congregation on earth. For more information on amusement zones connect with our authorized vendor:\n\nS.no\tAgency Name\tMobile Number\tEmail\n1\tAadhyasree Infotainment\t7288889999, 9550868999, 8466012345\tinfo@shreyasgroup.net</string>
    <string name="vending_zones_title">Agency for Vending Zones in Maha Kumbh Mela 2025</string>
    <string name="vending_zones_details">Maha Kumbh Mela is an auspicious occasion, which blends spirituality, culture, tradition, and offers a unique opportunity for organizations to connect with millions of hearts. Prayagraj Mela Authority have selected a vendor for vending zones for the upcoming Maha Kumbh Mela, the world\'s largest human congregation on earth. For more information on vending zones connect with our authorized vendor:\n\nS.no\tAgency Name\tMobile Number\tEmail\n1\tAadhyasree Infotainment\t7288889999, 9550868999, 8466012345\tinfo@shreyasgroup.net</string>
    <string name="activity_zones_title">Agency for Activity Zones in Maha Kumbh Mela 2025</string>
    <string name="activity_zones_details">Maha Kumbh Mela is an auspicious occasion, which blends spirituality, culture, tradition, and offers a unique opportunity for organizations to connect with millions of hearts. Prayagraj Mela Authority have selected a vendor for activity zones for the upcoming Maha Kumbh Mela, the world\'s largest human congregation on earth. For more information on activity zones connect with our authorized vendor:\n\nS.no\tAgency Name\tMobile Number\tEmail\n1\tAadhyasree Infotainment\t7288889999, 9550869999, 8466012345\tinfo@shreyasgroup.net</string>
    <string name="parking_facility_title">Agencies for Parking Facility Management in Maha Kumbh Mela 2025</string>
    <string name="parking_facility_details">Maha Kumbh Mela is an auspicious occasion, which blends spirituality, culture, tradition, and offers a unique opportunity for organizations to connect with millions of hearts.\nPrayagraj Mela Authority have selected a group of vendors to manage the parking facility for the upcoming Maha Kumbh Mela, the world\'s largest human congregation on earth.\nFor more information on parking facility connect with our authorized vendors:\n\nS.no\tAgency Name\tMobile Number\tEmail\n1\tParviom Technology Pvt Ltd.\t8800167249\tminhaz.haque@myparkplus.com , jagrit.dewan@myparkplus.com\n2\tLN Constructions\t9225308308\tswapnil_gandhi@ymail.com\n3\tSaudagar Agency\t8055555615\tMohammed.rafi2535@gmail.com\n4\tBalaji Enterprises\t8975498833\tbalajienterprisesahmednagar@gmail.com</string>
    <string name="advertisement_opportunities_title">Agencies for Advertisement Opportunities for Maha Kumbh Mela 2025</string>
    <string name="advertisement_opportunities_details">Maha Kumbh Mela is an auspicious occasion, which blends spirituality, culture, tradition, and offers a unique opportunity for organizations to connect with millions of hearts.\nPrayagraj Mela Authority have selected a group of vendors to manage the advertisement rights for the upcoming Maha Kumbh Mela, the world\'s largest human congregation on earth.\nFor more information on advertising opportunities connect with our authorized vendors:\n\nS.no\tAgency Name\tAllotted Inventory\tMobile Number\tEmail\n1\tAadhyasree Infotainment\tHoardings, Gantry/Box Gate, Electric Poles, Watch Tower/Media Tower/Fire Tower, Charging Stand Points, Sky Advertising Balloon\t7288889999, 9550869999, 8466012345\tinfo@shreyasgroup.net\n2\tCrayons Advertising Ltd.\tPublic Accommodations\t9818626725\tooh@thecrayonsnetwork.com\n3\tVritti Solution Ltd.\tLED Screen Vans\t9561068555\trajesh.radhakrishnan@vritti.co.in</string>
    <string name="food_court_title">Agencies for Food Court for Maha Kumbh Mela 2025</string>
    <string name="food_court_details">The Maha Kumbh Mela, an occasion known for its deep spiritual importance and the convergence of varied traditions, transforms food court areas into more than commercial outlets. These spaces serve as retreats for visitors to rejuvenate, savour a multitude of tastes, and immerse themselves in the authentic essence of Indian cuisine.\nFor more information on collaboration for food court connect with our authorized vendors:\n\nSr.No\tAgency Name\tMobile Number\tEmail ID\n1\tAraha Hospitality Pvt.Ltd\t9619633999\tarahahospitality@gmail.com\n2\tTanish Foods\t9891291543\tops.sanskriti@gmail.com\n3\tKakis Caterers\t6392148058\tkakiscaterers@gmail.com\n4\tMata ji ki Rasoi\t9151932316, 9151932320\treachjsgujral@yahoo.com\n5\tBottle Lab Technologies Pvt. Ltd.\t8951701082\tshabbir.kapdawala@thesmartq.com\n6\tCKG Foods Pvt.Ltd\t9810272897, 9868238430\tfoods.ckg@gmail.com</string>
    <string name="milk_booths_title">Agencies for Milk Booths for Maha Kumbh Mela 2025</string>
    <string name="milk_booths_details">The Maha Kumbh Mela, an occasion known for its deep spiritual importance and the convergence of varied traditions, transforms milk booths into more than commercial outlets. These spaces serve as retreats for visitors to rejuvenate, savour a multitude of tastes, and immerse themselves in the authentic essence of Indian cuisine.\nFor more information on collaboration for milk booths connect with our authorized vendors:\n\nSr.No\tAgency Name\tMobile Number\tEmail ID\n1\tMother Dairy\t8299701550\tsantosh.verma@motherdairy.com\n2\tAmul\t9616530442\tsantosh.srivastava@amul.coop\n3\tShyam Dairy Products\t9919804948\tsales.polypack.sd@shyamgroup.org</string>
    <string name="land_suvidha_title">Land and Suvidha Allotment Portal for Maha Kumbh 2025</string>
    <string name="choose_an_location">Select a category</string>
    <string name="ghat">GHAT</string>
    <string name="mahatma">MAHATMA</string>
    <string name="temple">TEMPLE</string>
    <string name="washroom">WASHROOM</string>
    <string name="food">FOOD</string>
    <string name="hotel">HOTEL</string>
    <string name="bhandara">BHANDARA</string>
    <string name="parking">PARKING</string>
    <string name="shop">SHOP</string>
    <string name="prasad_shop">PRASAD</string>
    <string name="call">Call</string>
    <string name="visit">Visit</string>
    <string name="address">Address :</string>
</resources>