<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.More.DoesAndDontsFragment">

    <include layout="@layout/custom_tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_do_s"
                android:layout_width="160dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/bhagwa"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <TextView
                    android:id="@+id/tv_do_s"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/do_s"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_don_ts"
                android:layout_width="160dp"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">


                <TextView
                    android:id="@+id/tv_don_ts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/dont_s"
                    android:textColor="@color/bhagwa"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/text_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cv_do_s"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/tv_dos_and_donts_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/do_list"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_below="@+id/text_holder" />


        </RelativeLayout>

    </ScrollView>


</LinearLayout>